--- a/pom.xml
+++ b/pom.xml
@@ -82,12 +82,12 @@
                 <runner>homeWork1.xml</runner>
             </properties>
         </profile>
-        <!--<profile>-->
-            <!--<id>hw2</id>-->
-            <!--<properties>-->
-                <!--<runner>homeWork2</runner>-->
-            <!--</properties>-->
-        <!--</profile>-->
+        <profile>
+            <id>hw2_1</id>
+            <properties>
+                <runner>homeWork2_ex1.xml</runner>
+            </properties>
+        </profile>
     </profiles>
 
 </project>
