HW4. Test case 1 minor changes are added. Test case 2, drag_n_drop element, has been implemented

--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,12 @@
                 <runner>homeWork3.xml</runner>
             </properties>
         </profile>
+        <profile>
+            <id>hw4</id>
+            <properties>
+                <runner>homeWork4.xml</runner>
+            </properties>
+        </profile>
     </profiles>
 
 </project>
