--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
             <version>1.5.2</version>
         </dependency>
 
+        <!--Gson-->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.2</version>
+        </dependency>
         <!--<dependency>-->
         <!--<groupId>org.aspectj</groupId>-->
         <!--<artifactId>aspectjweaver</artifactId>-->
